Finaliza Tela Vagas Detalhes Cliente

--- a/SocialMediaFreelas.App/Pages/Home/Freelancer/Index.cshtml
+++ b/SocialMediaFreelas.App/Pages/Home/Freelancer/Index.cshtml
@@ -31,18 +31,13 @@
                         <div class="fs-3 fw-light text-muted">Seja bem vindo!</div>
                         <h1 class="display-3 fw-bolder mb-5" id="titulo-principal-home"><span class="text-gradient d-inline">Encontre um serviço agora.</span></h1>
                         <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
-                        <button class="button-29" role="button" id="botaoAcao" href="../vagas">Encontre um serviço</button>
+                        <a class="button-29 btn" asp-page="/Vagas/Index" role="button">Encontre um serviço</a>
                         </div>
                     </div>
                 </div>
                 <div class="">
-                    <!-- Header profile picture-->
                     <div class="d-flex justify-content-center mt-5 mt-xxl-0">
                         <div class="profile bg-gradient-primary-to-secondary">
-                            <!-- TIP: For best results, use a photo with a transparent background like the demo example below-->
-                            <!-- Watch a tutorial on how to do this on YouTube (link)-->
-                        <!--<img class="profile-img" style="border-radius:50%;max-width:100%" src="https://tse3.mm.bing.net/th/id/OIG4.fv0CP8aPqrEHrTDwzVlv?pid=ImgGn" alt="..." />-->
-                        
                         </div>
                     </div>
                 </div>
