--- a/SocialMediaFreelas.App/Pages/Home/Cliente/Index.cshtml
+++ b/SocialMediaFreelas.App/Pages/Home/Cliente/Index.cshtml
@@ -30,7 +30,7 @@
                         <div class="fs-3 fw-light text-muted">Seja bem vindo!</div>
                         <h1 class="display-3 fw-bolder mb-5" id="titulo-principal-home"><span class="text-gradient d-inline">Encontre um profissional agora.</span></h1>
                         <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
-                            <button class="button-29" role="button" href="../freelancers">Encontre um profissional</button>
+                        <a class="button-29 btn" asp-page="/Vagas/Create" role="button">Contrate um profissional</a>
                         </div>
                     </div>
                 </div>
@@ -38,9 +38,6 @@
                     
                     <div class="d-flex justify-content-center mt-5 mt-xxl-0">
                         <div class="profile bg-gradient-primary-to-secondary">
-                        
-                        <!--<img class="profile-img" style="border-radius:50%;max-width:100%" src="https://tse3.mm.bing.net/th/id/OIG4.fv0CP8aPqrEHrTDwzVlv?pid=ImgGn" alt="..." />-->
-                        
                         </div>
                     </div>
                 </div>
