Ajusta tela Vagas sem footer

--- a/SocialMediaFreelas.App/Pages/Vagas/Index.cshtml
+++ b/SocialMediaFreelas.App/Pages/Vagas/Index.cshtml
@@ -9,6 +9,11 @@
     .icon {
         color: #5891ff;
 }
+
+#footer 
+{
+    display: none;
+}
 </style>
 
 
@@ -53,7 +58,7 @@
                                 @if (vaga.Status == "Aberta")
                                 {
                                     <div class="card-body">
-                                        <button type="button" class="btn btn-outline-primary mb-1" asp-page="./Details" asp-route-id="@vaga.Id">Detalhes</button>
+                                        <a type="button" class="btn btn-outline-primary mb-1" asp-page="./Details" asp-route-id="@vaga.Id">Detalhes</button>
                                     </div>
                                 }
                                 else if (vaga.Status == "Fechada")
