--- a/SocialMediaFreelas.App/Pages/Vagas/Index.cshtml
+++ b/SocialMediaFreelas.App/Pages/Vagas/Index.cshtml
@@ -58,7 +58,7 @@
                                 @if (vaga.Status == "Aberta")
                                 {
                                     <div class="card-body">
-                                        <a type="button" class="btn btn-outline-primary mb-1" asp-page="./Details" asp-route-id="@vaga.Id">Detalhes</button>
+                                        <a type="button" class="btn btn-outline-primary mb-1" asp-page="./Details" asp-route-id="@vaga.Id">Detalhes</a>
                                     </div>
                                 }
                                 else if (vaga.Status == "Fechada")
